added animated background and refactored

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS SAMURAI</title>
+    <script defer src="/js/utils.js"></script>
+    <script defer src="/js/classes.js"></script>
     <script defer src="index.js"></script>
     <style>
       * {
@@ -25,28 +27,78 @@
         "
       >
         <!-- Player health -->
-        <div style="background-color: yellow; height: 30px; width: 100%"></div>
+        <div
+          style="
+            position: relative;
+            height: 30px;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+          "
+        >
+          <div
+            style="background-color: yellow; height: 30px; width: 100%"
+          ></div>
+          <div
+            id="playerHealth"
+            style="
+              position: absolute;
+              background: blue;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              width: 100%;
+            "
+          ></div>
+        </div>
         <!-- timer -->
         <div
+          id="timer"
           style="
             background-color: red;
             width: 100px;
             height: 100px;
             flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
           "
-        ></div>
+        >
+          10
+        </div>
         <!-- enemy health -->
         <div style="position: relative; height: 30px; width: 100%">
+          <div style="background-color: yellow; height: 30px"></div>
           <div
             id="enemyHealth"
-            style="background-color: yellow; height: 30px"
+            style="
+              position: absolute;
+              background: blue;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+            "
           ></div>
-          <div style="position: absolute; background: blue"></div>
         </div>
+      </div>
+      <div
+        id="displayText"
+        style="
+          position: absolute;
+          color: white;
+          align-items: center;
+          justify-content: center;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display: none;
+        "
+      >
+        Tie
       </div>
       <canvas></canvas>
     </div>
   </body>
 </html>
-
-<!-- YOUTUBE 1H 28MIN -->
