--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS SAMURAI</title>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script defer src="/js/utils.js"></script>
     <script defer src="/js/classes.js"></script>
     <script defer src="index.js"></script>
     <style>
       * {
         box-sizing: border-box;
+        font-family: 'Press Start 2P';
       }
     </style>
   </head>
@@ -30,20 +44,20 @@
         <div
           style="
             position: relative;
-            height: 30px;
             width: 100%;
             display: flex;
             justify-content: flex-end;
+            border-top: 4px solid ghostwhite;
+            border-bottom: 4px solid ghostwhite;
+            border-left: 4px solid ghostwhite;
           "
         >
-          <div
-            style="background-color: yellow; height: 30px; width: 100%"
-          ></div>
+          <div style="background-color: red; height: 30px; width: 100%"></div>
           <div
             id="playerHealth"
             style="
               position: absolute;
-              background: blue;
+              background: #818cf8;
               top: 0;
               right: 0;
               bottom: 0;
@@ -55,25 +69,35 @@
         <div
           id="timer"
           style="
-            background-color: red;
+            background-color: black;
             width: 100px;
-            height: 100px;
+            height: 50px;
             flex-shrink: 0;
             display: flex;
             align-items: center;
             justify-content: center;
+            color: ghostwhite;
+            border: 4px solid ghostwhite;
           "
         >
           10
         </div>
         <!-- enemy health -->
-        <div style="position: relative; height: 30px; width: 100%">
-          <div style="background-color: yellow; height: 30px"></div>
+        <div
+          style="
+            position: relative;
+            width: 100%;
+            border-top: 4px solid ghostwhite;
+            border-bottom: 4px solid ghostwhite;
+            border-right: 4px solid ghostwhite;
+          "
+        >
+          <div style="background-color: red; height: 30px"></div>
           <div
             id="enemyHealth"
             style="
               position: absolute;
-              background: blue;
+              background: #818cf8;
               top: 0;
               right: 0;
               bottom: 0;
